src/objects/SautterMaps__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings related to Sautter Maps Package</description>
    <fields>
        <fullName>BingMapsKey__c</fullName>
        <inlineHelpText>The Bing Maps Key you get by going to http://www.bingmapsportal.com</inlineHelpText>
        <label>Bing Maps Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use Bing Maps.  Check ONLY ONE map option.</inlineHelpText>
        <label>Use Bing Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Center_Latitude__c</fullName>
        <defaultValue>38.8951</defaultValue>
        <inlineHelpText>The default center latitude, use for centering list views and when a lat / long doesn&apos;t exist in an embedded map.</inlineHelpText>
        <label>Default Center Latitude</label>
        <precision>16</precision>
        <required>true</required>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Center_Longitude__c</fullName>
        <defaultValue>-77.0367</defaultValue>
        <inlineHelpText>The default center longitude, use for centering list views and when a lat / long doesn&apos;t exist in an embedded map.</inlineHelpText>
        <label>Default Center Longitude</label>
        <precision>16</precision>
        <required>true</required>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Map_Icon__c</fullName>
        <defaultValue>&quot;/mapIcons/green-dot.png&quot;</defaultValue>
        <inlineHelpText>The default icon that appears as a place marker for List View Maps.  Icons are in a static resource zip file called mapIcons.zip.</inlineHelpText>
        <label>Default Map Icon</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esri_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use Esri Maps.  Check ONLY ONE map selection.</inlineHelpText>
        <label>Use ESRI Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoogleMapsKey__c</fullName>
        <inlineHelpText>The Google Maps Key to be used when generating Google Maps.</inlineHelpText>
        <label>Google Maps Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use Google Maps.  Check ONLY ONE map technology.</inlineHelpText>
        <label>Use Google Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Map_Zoom__c</fullName>
        <defaultValue>11</defaultValue>
        <inlineHelpText>Zoom level for List View Maps that show multiple objects in a single map. 0 is world view, 19 is very close up.</inlineHelpText>
        <label>List Map Zoom</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zoom__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>Zoom level for Embedded Maps that show a single object in a standard page layout. 0 is world view, 19 is very close up.</inlineHelpText>
        <label>Embedded Map Zoom</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sautter Maps</label>
</CustomObject>